--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,18 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  fonts:
+    - family: Open Sans
+      fonts:
+        - asset: ./assets/fonts/OpenSans-Regular.ttf
+        - asset: ./assets/fonts/OpenSans-Light.ttf
+          weight: 300
+        - asset: ./assets/fonts/OpenSans-Medium.ttf
+          weight: 500
+        - asset: ./assets/fonts/OpenSans-SemiBold.ttf
+          weight: 600
+        - asset: ./assets/fonts/OpenSans-Bold.ttf
+          weight: 700
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
