--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  uuid: ^3.0.7
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +59,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/images/sample-1.png
   fonts:
     - family: Open Sans
       fonts:
