--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/sample-1.png
+    - assets/images/uncm-logo.png
   fonts:
     - family: Open Sans
       fonts:
